[package]
name = "p2ps"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Bicheka/p2p-tls"
description = "Easy to implement security for p2p connections"
keywords = ["p2p", "secure", "network", "tcp"]
readme = "README.md"
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1.86"
hkdf = "0.12.4"
rand = "0.8.5"
sha2 = "0.10.8"
tokio = {version = "1.42.0", features = ["full"]}
x25519-dalek = "2.0.1"
